Optionally remove calling app info from query phase
Test: Built locally
Bug: 267948031
API-Coverage-Bug: 247549381

Change-Id: I8272fca0aec600ef46628bd5bee9acc3186680c7